# The library to make 
lib_LTLIBRARIES = libbt.la

# Any source files?
libbt_la_SOURCES =

# List extra libtool objects (.lo) or libtool libraries (.la) to add to the library
libbt_la_LIBADD = \
  os/libbtos.la \
  bus/libbtbus.la \
  wambot/libbtwambot.la \
  kinematics/libbtkinematics.la \
  gravity/libbtgravity.la \
  interp/libbtinterp.la \
  trajectory/libbttrajectory.la \
  log/libbtlog.la \
  wam/libbtwam.la \
  gsl/libbtgsl.la \
  control/libbtcontrol.la

# Subdirectories to make
SUBDIRS = os bus wambot kinematics gravity interp trajectory log wam gsl control

